More URL -> URI refactoring
This one is a little more interesting as we were deliberately using one
of the URL constructors.